# tournament-rs

./: Cargo.toml
src/: executor.rs  game.rs  lib.rs  player.rs  player_repository.rs
src/ranking/: bradley_terry.rs  mod.rs
src/scheduling/: mod.rs  round_robbin.rs  round_robbin_scheduler.rs  scheduler.rs
src/scoring/: mod.rs
src/tournaments/: mod.rs
tests/: test.rs
