[package]
name = "tournament-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.15.6"
rand = "0.8.5"
anyhow = "1.0.71"
spmc = "0.3.0"
threadpool = "1.8.1"

[dev-dependencies]
glasswing = {git = "https://github.com/Rechenmaschine/glasswing.git", features = ["tournaments", "serde_support"]}